@@ -44,6 +44,7 @@ Verilator 5.017 devel
 * Fix compile warning on unused member function variable (#4567).
 * Fix method narrowing conversion compiler error (#4568).
 * Fix display optimization ignoring side effects (#4585).
+* Fix fault on empty clocking block (#4593). [Alex Mykyta]
 * Fix preprocessor to show `line 2 on resumed file.
 
 
